[package]
name = "ultra_measure"
version = "1.0.0"
edition = "2024"

[patch.crates-io]
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "e3aff14", package = "embassy-time-driver" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e3aff14", package = "embassy-time" }

[dependencies]
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "e3aff14", package = "embassy-rp", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[lib]
name = "ultra_measure"
path = "src/ultra_measure.rs"
