[package]
name = "ultra_measure"
version = "1.0.0"
edition = "2024"

[lib]
name = "ultra_measure"
path = "src/ultra_measure.rs"

[features]
default = ["with-embassy"]
with-embassy = ["embassy-time", "embassy-rp"]

[dependencies]
embassy-time = {  git = "https://github.com/embassy-rs/embassy", rev = "e3aff14", package = "embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
]  }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "e3aff14", package = "embassy-rp", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }


