[package]
name = "ultra_measure"
version = "1.0.0"
edition = "2024"

[lib]
name = "ultra_measure"
path = "src/ultra_measure.rs"

[dependencies]
embassy-time = { version = ">=0.4", features = ["defmt","defmt-timestamp-uptime"] }
embassy-rp = { version = ">=0.4", features = ["defmt","unstable-pac","time-driver","critical-section-impl","rp2040"] }

defmt-rtt = ">=1.0.0"
panic-probe = { version = ">=1.0.0", features = ["print-defmt"] }


